# arxiv-extraction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily_digest.yml  deploy_web.yml
config/: roadmap.yaml  topics.yaml
data/: 2026-04-19.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  index.json
docs/: index.html
src/arxiv_digest/: __main__.py  cli.py
src/arxiv_digest/application/: digest_service.py  fetcher.py  filter.py  prioritizer.py
src/arxiv_digest/domain/: models.py
src/arxiv_digest/infrastructure/: arxiv_client.py  storage.py
tests/: test_filter.py  test_models.py  test_prioritizer.py
web/: index.html
