[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-digest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
arxiv-digest = "arxiv_digest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_digest"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
